# yet-another-friendly-companion

./: .gitignore  README.md  rnn.py
far_ws/src/follow_ahead_rl/: .person_trajectories.pkl.icloud  CMakeLists.txt  README.md  RunningCokeCanObstacle
far_ws/src/follow_ahead_rl/config_nav/: person_teb_local_planner_params.yaml  teb_local_planner_params.yaml
far_ws/src/follow_ahead_rl/gym-gazeboros_ac/: README.md  setup.py
far_ws/src/follow_ahead_rl/gym-gazeboros_ac/gym_gazeboros_ac/: __init__.py
far_ws/src/follow_ahead_rl/launch/: cokecanbots.launch  multi_navigation.launch  navigation.launch  pair_launch.launch  spawn_obstacles.launch  spawn_robot.launch  spawn_robots.launch  turtlebot.launch  turtlebot_obstacle.launch  turtlebots.launch
far_ws/src/follow_ahead_rl/old_script/: base_line.py  tf_node.py
far_ws/src/follow_ahead_rl/scripts/: DH_EVAL_RESULTS.txt  HINN_EVAL_RESULTS.txt  HumanIntentNetwork.py  HumanIntentNetwork_minimal_code_example.py  HumanIntentNetwork_train.py  ali_deep_Qnetwork.py  controller_reward.txt  deep_Qnetwork.py  distance_heuristic.py  ha_ctrl_best.csv  ha_rnn_loss.csv  hinn_data_collector.py  hinn_eval.py  hinn_train.py  hooman_intent_subnet.py  lstm_reward.txt  monte_carlo.py  move_test.py  multi_move_test.py  my_rnn.pt  ppo_continuous.py  rnn.py  rnn_ali_version.py  rnn_ali_version_debug.py  rnn_single_threaded.py  rnn_single_threaded_lunar.py  rnn_single_threaded_ros.py  td_ddpg_continuous.py  test.py  world_model.py
far_ws/src/follow_ahead_rl/scripts/d4pg/: test.py  (+1 more)
far_ws/src/follow_ahead_rl/worlds/: cokecan.world  cylinder.world
(+105 files in other folders)
